adding missing dependency for pytest on CircleCI

--- a/circle.yml
+++ b/circle.yml
@@ -4,5 +4,5 @@ test:
 
 dependencies: 
   pre:
-    - pip install pytest
+    - pip install pytest pytest-cov python-dateutil aniso8601
     - mvn dependency:copy-dependencies -DoutputDirectory=./jars
