--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,8 @@ ENV/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# Java dependencies
 java/.idea/*
 java/dependency-reduced-pom.xml
 java/*.iml
+jars/
