Explicitly install tooling on CircleCi

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           name: Install dependencies
           # We need to install venv as the image doesn't provide it
           command: |
-            pip install --upgrade pip setuptools
+            pip install --upgrade pip setuptools bandit black xenon pylint
             python setup.py install
             mvn -q dependency:copy-dependencies -DoutputDirectory=./jars
 
