--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
 
       - run:
           name: Run linter
-          command: pylint --persistent=n --jobs=0 --reports=y sutime 2>&1 | tee ./test-reports/linter.txt
+          command: pylint sutime 2>&1 | tee ./test-reports/linter.txt
 
       - run:
           name: Run complexity check
