--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,7 @@ version: 2
 jobs:
   build:
     docker:
-      # This was the easiest way to get Python, the JRE and Maven in one image
-      - image: openkbs/jre-mvn-py3
-
+      - image: frable/openjdk11-python3.7-slim-stretch
     working_directory: ~/repo
 
     steps:
@@ -17,30 +15,24 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "setup.py" }}-{{ checksum "pom.xml" }}
+          - dependencies-{{ checksum "setup.py" }}-{{ checksum "pom.xml" }}
 
       - run:
           name: Install dependencies
-          # We need to install venv as the image doesn't provide it
           command: |
             pip install --upgrade pip setuptools bandit xenon pylint
-            python setup.py install
-            mvn -q dependency:copy-dependencies -DoutputDirectory=./jars
+            python3 setup.py install
+            mvn dependency:copy-dependencies -DoutputDirectory=./jars -P spanish
 
       - save_cache:
           paths:
-            - ./venv
             - ./jars
-          key: v1-dependencies-{{ checksum "setup.py" }}-{{ checksum "pom.xml" }}
+            - ~/.cache/pip
+          key: dependencies-{{ checksum "setup.py" }}-{{ checksum "pom.xml" }}
 
       - run:
           name: Create test reports folder
           command: mkdir test-reports
-
-      # black requires Python >3.6
-      # - run:
-      #     name: Run formatter check
-      #     command: black -l 79 --py36 --check sutime 2>&1 | tee ./test-reports/formatter.txt
 
       - run:
           name: Run linter
@@ -52,7 +44,7 @@ jobs:
 
       - run:
           name: Run security linter
-          command: bandit -r ./sutime/sutime.py
+          command: bandit -r ./sutime/sutime.py 2>&1 | tee ./test-reports/bandit.txt
 
       - run:
           name: Run tests
