--- a/java/pom.xml
+++ b/java/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.stanford.nlp</groupId>
     <artifactId>stanford-corenlp-sutime-python</artifactId>
-    <version>1.3.0</version>
+    <version>1.4.0</version>
     <name>CoreNLP SUTime Python Wrapper</name>
     <inceptionYear>2016</inceptionYear>
     <licenses>
@@ -23,15 +23,16 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <corenlp.version>3.9.2</corenlp.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>2.3.1</version>
+            <version>2.4.0-b180830.0359</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
@@ -41,7 +42,7 @@
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>2.3.1</version>
+            <version>2.4.0-b180830.0438</version>
         </dependency>
         <dependency>
             <groupId>javax.activation</groupId>
@@ -51,19 +52,13 @@
         <dependency>
             <groupId>edu.stanford.nlp</groupId>
             <artifactId>stanford-corenlp</artifactId>
-            <version>3.9.2</version>
+            <version>${corenlp.version}</version>
         </dependency>
         <dependency>
             <groupId>edu.stanford.nlp</groupId>
             <artifactId>stanford-corenlp</artifactId>
-            <version>3.9.2</version>
+            <version>${corenlp.version}</version>
             <classifier>models</classifier>
-        </dependency>
-        <dependency>
-            <groupId>edu.stanford.nlp</groupId>
-            <artifactId>stanford-corenlp</artifactId>
-            <version>3.9.2</version>
-            <classifier>models-spanish</classifier>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -77,6 +72,74 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+    <profiles>
+        <profile>
+            <id>arabic</id>
+            <dependencies>
+                <dependency>
+                    <groupId>edu.stanford.nlp</groupId>
+                    <artifactId>stanford-corenlp</artifactId>
+                    <version>${corenlp.version}</version>
+                    <classifier>models-arabic</classifier>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>chinese</id>
+            <dependencies>
+                <dependency>
+                    <groupId>edu.stanford.nlp</groupId>
+                    <artifactId>stanford-corenlp</artifactId>
+                    <version>${corenlp.version}</version>
+                    <classifier>models-chinese</classifier>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>english</id>
+            <dependencies>
+                <dependency>
+                    <groupId>edu.stanford.nlp</groupId>
+                    <artifactId>stanford-corenlp</artifactId>
+                    <version>${corenlp.version}</version>
+                    <classifier>models-english</classifier>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>french</id>
+            <dependencies>
+                <dependency>
+                    <groupId>edu.stanford.nlp</groupId>
+                    <artifactId>stanford-corenlp</artifactId>
+                    <version>${corenlp.version}</version>
+                    <classifier>models-french</classifier>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>german</id>
+            <dependencies>
+                <dependency>
+                    <groupId>edu.stanford.nlp</groupId>
+                    <artifactId>stanford-corenlp</artifactId>
+                    <version>${corenlp.version}</version>
+                    <classifier>models-german</classifier>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>spanish</id>
+            <dependencies>
+                <dependency>
+                    <groupId>edu.stanford.nlp</groupId>
+                    <artifactId>stanford-corenlp</artifactId>
+                    <version>${corenlp.version}</version>
+                    <classifier>models-spanish</classifier>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
     <build>
         <pluginManagement>
             <plugins>
@@ -88,7 +151,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-install-plugin</artifactId>
-                    <version>2.5.2</version>
+                    <version>3.0.0-M1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -98,7 +161,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.1.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -111,9 +174,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <release>${java.version}</release>
-                </configuration>
+                <!--<configuration>-->
+                    <!--<release>${java.version}</release>-->
+                <!--</configuration>-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
