--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,18 @@
 [aliases]
-test=pytest
+test = pytest
+
 [metadata]
-description-file=README.md
+description-file = README.md
 license_file = LICENSE
+
 [bdist_wheel]
-universal=1
+universal = 1
+
+[pydocstyle]
+convention = google
+
+[flake8]
+max-string-usages = 5
+max-local-variables = 6
+
+[isort]
