--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,17 @@ universal = 1
 convention = google
 
 [flake8]
-max-string-usages = 5
+max-string-usages = 6
 max-local-variables = 6
+max-arguments = 7
+max-line-complexity = 15
+max-try-body-length = 5
+extend-ignore =
+    # Google Python style is not RST until after processed by Napoleon
+    # See https://github.com/peterjc/flake8-rst-docstrings/issues/17
+    RST201,RST203,RST301,
+exclude =
+    sutime/test
+    .build
 
 [isort]
