--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,10 @@ classifiers = [
 packages = [
     { include = "sutime" },
 ]
-include = ["sutime/jars/stanford-corenlp-sutime-python-1.4.0.jar"]
+include = [
+    "sutime/jars/stanford-corenlp-sutime-python-1.4.0.jar",
+    "sutime/pom.xml",
+]
 
 [tool.poetry.dependencies]
 python = ">=3.6,<4.0"
