Make rc6 actual v1.0.0

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=frable-github
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=python-sutime
-sonar.projectVersion=1.0.0rc6
+sonar.projectVersion=1.0.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./sutime
